--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"dompurify": "^3.2.5",
+		"html-react-parser": "^5.2.3",
 		"next": "15.3.1",
 		"openai": "^4.95.1",
 		"react": "^19.0.0",
