--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
 	"$schema": "https://json.schemastore.org/biome.json",
 	"formatter": {
 		"enabled": true,
-		"ignore": ["node_modules", "build", ".next", ".history"]
+		"ignore": ["node_modules", "build", ".next", ".history", "public"]
 	},
 	"linter": {
 		"enabled": true,
@@ -11,6 +11,6 @@
 		}
 	},
 	"files": {
-		"ignore": ["node_modules", "build", ".next"]
+		"ignore": ["node_modules", "build", ".next", ".history", "public"]
 	}
 }
