--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"biome": "npx biome check --write"
+		"biome": "npx biome check --write",
+		"lint:staged": "biome check --error-on-warnings --no-errors-on-unmatched --staged ./**/*.{js,ts}",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"dompurify": "^3.2.5",
@@ -27,6 +29,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"husky": "^9.1.7",
 		"sass": "^1.86.3",
 		"tailwindcss": "^4",
 		"typescript": "^5"
